feat: 支持按队名检索可加入队伍
